crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__macro_call_template_unclosed.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = quote!( `hello"
---
alder::syntax

  × this template is missing its closing backtick at the end of the file
   ╭─[/project/src/main.ald:1:27]
 1 │ let value = quote!( `hello
   ·                     ┬
   ·                     ╰── this template starts here
   ╰────
  help: close the template with a backtick; put a backslash before a literal
        backtick in its text
