crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__macro_param_separator.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "macro value(one two) {}"
---
alder::syntax

  × I was expecting `,` or `)` after this macro parameter
   ╭─[/project/src/main.ald:1:17]
 1 │ macro value(one two) {}
   ·            ┬    ┬
   ·            │    ╰── expected `,` or `)`
   ·            ╰── this `(` opens here
   ╰────
