crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_block_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@if x {<b>y</b>"
---
alder::syntax

  × I was expecting `}` to close this markup child block at the end of the
  │ file
   ╭─[/project/src/main.ald:1:31]
 1 │ let value = <p>@if x {<b>y</b>
   ·                ┬
   ·                ╰── this `@if` starts here
   ╰────
